# bones

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE.md  api_documentation.html  cliff.toml  code_of_conduct.html  deny.toml  index.html  introduction.html  print.html  release-plz.toml  searchindex.js  searchindex.json
crates/bones_asset/: CHANGELOG.md  Cargo.toml
crates/bones_asset/examples/: dummy_io.rs  tutorial.rs
crates/bones_asset/src/: asset.rs  cid.rs  handle.rs  io.rs  labeled_id.rs  lib.rs  load.rs  metadata.rs  parse.rs  path.rs  server.rs
crates/bones_asset/tests/: asset_load.rs  dummy_io.rs  smoke.rs
crates/bones_asset/tests/assets/: default.game.yaml  pack.yaml  root.game.yaml
crates/bones_bevy_asset/: CHANGELOG.md  Cargo.toml
crates/bones_bevy_asset/assets/: game.meta.yaml
crates/bones_bevy_asset/assets/players/: player1.player.yaml  player2.player.json
crates/bones_bevy_asset/examples/: derive.rs
crates/bones_bevy_asset/macros/: CHANGELOG.md  Cargo.toml
crates/bones_bevy_asset/macros/src/: lib.rs
crates/bones_bevy_asset/src/: lib.rs
crates/bones_bevy_renderer/: CHANGELOG.md  Cargo.toml
crates/bones_bevy_renderer/examples/: debug_rendering.rs
crates/bones_bevy_renderer/src/: asset.rs  convert.rs  lib.rs
crates/bones_bevy_utils/: CHANGELOG.md  Cargo.toml
crates/bones_bevy_utils/src/: lib.rs
crates/bones_camera_shake/: Cargo.toml
crates/bones_camera_shake/src/: lib.rs
crates/bones_ecs/: CHANGELOG.md  Cargo.toml
crates/bones_ecs/examples/: pos_vel.rs  schema_derive.rs  schema_deserialize.rs
crates/bones_ecs/macros/: Cargo.toml
crates/bones_ecs/macros/src/: lib.rs
crates/bones_ecs/src/: bitset.rs  components.rs  dispatcher.rs  entities.rs  error.rs  join.rs  lib.rs  resources.rs  stage.rs  system.rs  ulid.rs  world.rs
crates/bones_ecs/src/components/: iterator.rs  typed.rs  untyped.rs
crates/bones_framework/: Cargo.toml
crates/bones_framework/src/: animation.rs  input.rs  lib.rs  localization.rs  params.rs  render.rs
crates/bones_framework/src/input/: keyboard.rs  mouse.rs
crates/bones_framework/src/render/: camera.rs  sprite.rs  tilemap.rs  ui.rs
crates/bones_has_load_progress/: Cargo.toml
crates/bones_has_load_progress/macros/: Cargo.toml
crates/bones_has_load_progress/macros/src/: lib.rs
crates/bones_has_load_progress/src/: lib.rs
crates/bones_input/: CHANGELOG.md  Cargo.toml
crates/bones_input/src/: lib.rs  time.rs  window.rs
crates/bones_input/src/time/: mod.rs  stopwatch.rs  timer.rs
crates/bones_lib/: Cargo.toml
crates/bones_lib/src/: lib.rs
crates/bones_matchmaker/: CHANGELOG.md  Cargo.toml
crates/bones_matchmaker/examples/: matchmaker_client.rs
crates/bones_matchmaker/src/: lib.rs  main.rs  matchmaker.rs  proxy.rs
crates/bones_matchmaker_proto/: CHANGELOG.md  Cargo.toml
crates/bones_reflect/: Cargo.toml
crates/bones_reflect/examples/: custom_type_data.rs  registration_derive.rs  schema_derive.rs  schema_deserialize.rs
crates/bones_reflect/examples/schema/: player.schema.yaml
crates/bones_reflect/macros/: Cargo.toml
crates/bones_reflect/src/: alloc.rs  lib.rs  ptr.rs  registry.rs  schema.rs  ser_de.rs  std_impls.rs  type_datas.rs
crates/bones_reflect/tests/: schema.rs  trybuild.rs
crates/bones_reflectish/: Cargo.toml
crates/bones_reflectish/examples/: derive.rs
crates/bones_reflectish/macros/: Cargo.toml
crates/bones_reflectish/src/: lib.rs
crates/bones_render/: CHANGELOG.md  Cargo.toml
crates/bones_render/src/: audio.rs  camera.rs  color.rs  datatypes.rs  lib.rs  line.rs  sprite.rs  tilemap.rs  transform.rs
crates/bones_schema/: Cargo.toml
crates/bones_schema/examples/: custom_type_data.rs  demo.rs  schema_derive.rs
crates/bones_schema/macros/: Cargo.toml
crates/bones_schema/src/: alloc.rs  lib.rs  ptr.rs  raw_fns.rs  registry.rs  schema.rs  std_impls.rs
crates/bones_schema/tests/: schema.rs  tests.rs
crates/bones_time/: Cargo.toml
crates/bones_time/src/: lib.rs  stopwatch.rs  time.rs  timer.rs
crates/bones_utils/: Cargo.toml
crates/bones_utils/macros/: Cargo.toml
crates/bones_utils/src/: collections.rs  key.rs  labeled_id.rs  lib.rs
crates/quinn_runtime_bevy/: CHANGELOG.md  Cargo.toml  README.md
crates/quinn_runtime_bevy/src/: lib.rs
crates/type_ulid/: CHANGELOG.md  Cargo.toml
crates/type_ulid/macros/: CHANGELOG.md  Cargo.toml
crates/type_ulid/src/: lib.rs
demos/asset_packs/: Cargo.toml
demos/asset_packs/assets/: game.yaml  pack.yaml
demos/asset_packs/src/: main.rs
demos/features_wgpu/: Cargo.toml
demos/features_wgpu/assets/: menu.lua  pack.yaml
demos/features_wgpu/src/: main.rs
demos/hello_world/: Cargo.toml
demos/hello_world/src/: main.rs
framework_crates/bones_asset/: CHANGELOG.md  Cargo.toml
framework_crates/bones_asset/examples/: tutorial.rs
framework_crates/bones_asset/src/: asset.rs  cid.rs  handle.rs  io.rs  lib.rs  network_handle.rs  parse.rs  serde.rs  server.rs
framework_crates/bones_bevy_renderer/: CHANGELOG.md  Cargo.toml
framework_crates/bones_bevy_renderer/src/: convert.rs  debug.rs  input.rs  lib.rs  lyon.rs  render.rs  rumble.rs  storage.rs  ui.rs
framework_crates/bones_ecs/: CHANGELOG.md  Cargo.toml  README.md
framework_crates/bones_ecs/examples/: pos_vel.rs
framework_crates/bones_ecs/macros/: Cargo.toml
framework_crates/bones_ecs/src/: bitset.rs  components.rs  entities.rs  error.rs  lib.rs  resources.rs  stage.rs  system.rs  world.rs
framework_crates/bones_ecs/tests/: desync_tree.rs
framework_crates/bones_framework/: Cargo.toml
framework_crates/bones_framework/src/: animation.rs  audio.rs  camera.rs  debug.rs  input.rs  lib.rs  localization.rs  logging.rs  networking.md  networking.rs  params.rs  render.rs  storage.rs  time.rs  utils.rs
framework_crates/bones_framework/tests/: reset.rs  system_param.rs
framework_crates/bones_lib/: Cargo.toml
framework_crates/bones_lib/src/: lib.rs  reset.rs  time.rs
framework_crates/bones_networking/: Cargo.toml
framework_crates/bones_networking/src/: lib.rs
src/: game.rs  (+5 more)
(+20904 files in other folders)
