[workspace]
resolver        = "2"
members         = ["framework_crates/*", "other_crates/*", "demos/*"]
default-members = ["framework_crates/*"]

[workspace.package]
edition       = "2021"
version       = "0.4.0"
rust-version  = "1.81"
readme        = "README.md"
homepage      = "https://fishfolk.org/development/bones/introduction/"
repository    = "https://github.com/fishfolk/bones"
documentation = "https://fishfolk.github.io/bones/rustdoc/bones_framework/index.html"
description   = "The bones game development framework."
license       = "MIT OR Apache-2.0"
authors       = ["The Fish Folk & Spicy Lobster Developers"]
categories    = ["game-development", "game-engines", "wasm", "data-structures"]
keywords      = ["bones", "bevy", "scripting", "ecs", "framework"]

[workspace.lints.clippy]
correctness = "warn"

[workspace.dependencies]
branches     = "0.1"
futures-lite = "2.3"
fxhash       = "0.2"
hashbrown    = "0.14"
maybe-owned  = "0.3"
parking_lot  = "0.12"
smallvec     = "1.11"
ustr         = "0.10"
iroh         = "0.29"

[profile.release]
lto = true
