[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Asset interface for bones_lib."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_asset"
repository  = "https://github.com/fishfolk/bones"
version     = "0.2.0"

[dependencies]
bones_ecs        = { version = "^0.2.0", path = "../bones_ecs" }
type_ulid        = { version = "^0.2.0", path = "../type_ulid" }

serde      = "1.0"
ulid       = "1.0"
sha2 = "0.10.7"
bs58 = "0.5.0"
anyhow = "1.0.71"
serde_yaml = "0.9.22"
serde_json = "1.0.99"
paste = "1.0.12"

[features]
default = []
