[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Asset interface for bones_lib."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_asset"
repository  = "https://github.com/fishfolk/bones"
version     = "0.2.0"

[dependencies]
bones_ecs        = { version = "^0.2", path = "../bones_ecs" }
bones_utils = { version = "0.1", path = "../bones_utils", features = ["serde"] }
bones_reflect = { version = "0.1", path = "../bones_reflect" }
type_ulid        = { version = "^0.2", path = "../type_ulid" }

serde      = "1.0"
sha2 = "0.10"
bs58 = "0.5"
anyhow = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
paste = "1.0"
ulid = { version = "1.0" }
semver = { version = "1.0.17", features = ["serde"] }

[features]
default = []
