[package]
name = "bones_bevy_asset"
version = "0.1.0"
edition = "2021"
authors = ["The Fish Folk & Spicy Lobster Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fishfolk/bones"

[dependencies]
bones_bevy_asset_macros = { version = "0.1.0", path = "./macros" }
type_ulid = { version = "0.1.0", path = "../type_ulid" }
uuid = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_yaml = "0.9.16"
serde_json = "1.0.91"
bones_lib = { version = "0.1.0", path = "../../", features = ["bevy"] }
bones_bevy_utils = { version = "0.1.0", path = "../bones_bevy_utils" }
bevy_asset = "0.9.1"
bevy_reflect = "0.9.1"
bevy_app = "0.9.1"
bevy_utils = "0.9.1"
glam = "0.22.0"

[dev-dependencies.bevy]
version = "0.9.0"
default-features = false
features = [
    "x11",
    "bevy_winit",
    "bevy_asset",
]
