[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Asset integration between bones_lib and Bevy."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_bevy_asset"
repository  = "https://github.com/fishfolk/bones"
version     = "0.1.0"

[dependencies]
bones_bevy_asset_macros = { version = "^0.2.0", path = "./macros" }
bones_bevy_utils        = { version = "^0.1.0", path = "../bones_bevy_utils" }
bones_lib               = { version = "^0.1.0", path = "../../", features = ["bevy"] }
type_ulid               = { version = "^0.1.0", path = "../type_ulid" }

bevy_app     = "0.9.1"
bevy_asset   = "0.9.1"
bevy_reflect = "0.9.1"
bevy_utils   = "0.9.1"
glam         = "0.22.0"
serde        = { version = "1.0.0", features = ["derive"] }
serde_json   = "1.0.91"
serde_yaml   = "0.9.16"
uuid         = "1.0.0"

[dev-dependencies.bevy]
default-features = false
features         = ["x11", "bevy_winit", "bevy_asset"]
version          = "0.9.0"
