[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Asset integration between bones_lib and Bevy."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_bevy_asset"
repository  = "https://github.com/fishfolk/bones"
version     = "0.2.0"

[dependencies]
bones_bevy_asset_macros = { version = "0.2", path = "./macros" }
bones_bevy_utils        = { version = "^0.2.0", path = "../bones_bevy_utils" }
bones_lib               = { version = "^0.2.0", path = "../../", features = ["bevy"] }
type_ulid               = { version = "^0.2.0", path = "../type_ulid" }

bevy_app     = "0.10"
bevy_asset   = "0.10"
bevy_reflect = "0.10"
bevy_utils   = "0.10"
glam         = "0.23"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1.0"
serde_yaml   = "0.9"
uuid         = "1.0"

[dev-dependencies.bevy]
default-features = false
features         = ["x11", "bevy_winit", "bevy_asset"]
version          = "0.10"
