[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Bevy plugin for rendering bones_lib games."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_bevy_renderer"
repository  = "https://github.com/fishfolk/bones"
version     = "0.2.0"

[dependencies]
bones_bevy_asset = { version = "^0.2.0", path = "../bones_bevy_asset" }
bones_lib        = { version = "^0.2.0", path = "../../", features = ["bevy"] }
type_ulid        = { version = "^0.2.0", path = "../type_ulid" }

glam       = { version = "0.23", features = ["serde"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# TODO: Update `bevy_simple_tilemap` when our PR is merged.
# https://github.com/forbjok/bevy_simple_tilemap/pull/9
bevy_prototype_lyon = "0.8"
# Disable default features to remove rayon par-iter, is not performant. Once https://github.com/forbjok/bevy_simple_tilemap/pull/17 is merged,
# switch off fork back to original crate.
bevy_simple_tilemap = {git = "https://github.com/MaxCWhitehead/bevy_simple_tilemap.git", default-features = false, branch = "v0.11.0"}


[dependencies.bevy]
default-features = false
features         = ["bevy_render", "bevy_core_pipeline", "bevy_sprite"]
version          = "0.10"
