[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Bevy plugin for rendering bones_lib games."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_bevy_renderer"
repository  = "https://github.com/fishfolk/bones"
version     = "0.2.0"

[dependencies]
bones_framework = { version = "^0.2.0", path = "../bones_framework" }

bevy_egui     = "0.21"
async-channel = "1.9"
glam          = { version = "0.24", features = ["serde"] }
bevy_prototype_lyon = "0.9"
lyon_tessellation = "1.0"

[dependencies.bevy]
default-features = false
features         = ["bevy_render", "bevy_core_pipeline", "bevy_sprite", "x11"]
version          = "0.11"
