[package]
name = "bones_bevy_utils"
description = "Utilities for using Bones with Bevy."
version = "0.1.0"
edition = "2021"
authors = ["The Fish Folk & Spicy Lobster Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fishfolk/bones"

[dependencies]
type_ulid = { version = "^0.1.0", path = "../type_ulid" }
bevy_ecs = "0.9.1"
