[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Utilities for using Bones with Bevy."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_bevy_utils"
repository  = "https://github.com/fishfolk/bones"
version     = "0.2.0"

[dependencies]
bevy_ecs  = "0.10"
type_ulid = { version = "^0.2.0", path = "../type_ulid" }
