[package]
name = "bones_camera_shake"
version = "0.1.0"
authors = ["Peter Hebden (Piturnah) <peterhebden6@gmail.com>", "Fish Folk & Spicy Lobster Developers"]
license = "MIT OR Apache-2.0"

edition = "2021"
description = "Small crate providing 2D camera shake for bevy_ecs."
repository = "https://github.com/fishfolk/bones"

[dependencies]
bevy = { version = "0.8", default_features = false }
# For now we are pointing at a git rev but this should be rectified when a new release is made.
# See https://github.com/Razaekel/noise-rs/pull/281.
noise = { git = "https://github.com/bsurmanski/noise-rs", rev = "5abdde1b819eccc47e74969c15e1b56ae5a055d6" }

[dev-dependencies]
bevy_core_pipeline = "0.9"
