[package]
authors = [
    "Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>",
    "Fish Folk & Spicy Lobster Developers",
]
categories = ["game-engines"]
description = "A tiny but very powerful ECS framework."
edition = "2021"
keywords = ["game", "ecs"]
license = "Apache-2.0"
name = "bones_ecs"
repository = "https://github.com/fishfolk/bones"
version = "0.2.0"

[features]
default = ["keysize16", "serde", "glam"]
serde = ["dep:serde", "serde_yaml"]
glam = ["dep:glam", "dep:paste"]

keysize16 = []
keysize20 = []
keysize24 = []
keysize32 = []

[dependencies]
bones_utils = { version = "0.1.0", path = "../bones_utils" }
bones_schema = { version = "0.1.0", path = "../bones_schema" }

anyhow         = "1.0"
atomic_refcell = "0.1"
bitset-core = "0.1"
bytemuck    = "1.12"
either      = "1.8"
fxhash      = "0.2"
itertools   = "0.10"
serde       = { version = "1.0", features = ["derive"], optional = true }
thiserror   = "1.0"
serde_yaml  = { version = "0.9", optional = true }
glam        = { version = "0.23", optional = true }
paste       = { version = "1.0", optional = true }

[dev-dependencies]
glam = "0.23"
