[package]
authors = [
    "Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>",
    "Fish Folk & Spicy Lobster Developers",
]
categories = ["game-engines"]
description = "A tiny but very powerful ECS framework."
edition = "2021"
keywords = ["game", "ecs"]
license = "Apache-2.0"
name = "bones_ecs"
repository = "https://github.com/fishfolk/bones"
version = "0.2.0"

[features]
default = ["keysize16"]

keysize16 = []
keysize20 = []
keysize24 = []
keysize32 = []

[dependencies]
aligned-vec    = "0.5"
anyhow         = "1.0"
atomic_refcell = "0.1"
# TODO: Replace Bevy's `Deref` and `DerefMut` derives with our own macros.
bevy_derive = "0.10"
bitset-core = "0.1"
bytemuck    = "1.12"
either      = "1.8"
fxhash      = "0.2"
itertools   = "0.10"
serde       = { version = "1.0", features = ["derive"], optional = true }
thiserror   = "1.0"
type_ulid   = { version = "^0.2.0", path = "../type_ulid" }

[dev-dependencies]
glam = "0.23"
