[package]
authors = [
    "Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>",
    "Fish Folk & Spicy Lobster Developers",
]
categories = ["game-engines"]
description = "A tiny but very powerful ECS framework."
edition = "2021"
keywords = ["game", "ecs"]
license = "Apache-2.0"
name = "bones_ecs"
repository = "https://github.com/fishfolk/bones"
version = "0.2.0"

[features]
default = ["keysize16"]
glam = ["dep:glam", "dep:paste", "bones_schema/glam"]

keysize16 = []
keysize20 = []
keysize24 = []
keysize32 = []

[dependencies]
bones_utils = { version = "0.1.0", path = "../bones_utils" }
bones_schema = { version = "0.1.0", path = "../bones_schema" }

anyhow         = "1.0"
atomic_refcell = "0.1"
bitset-core = "0.1"
either      = "1.8"
fxhash      = "0.2"
itertools   = "0.10"
thiserror   = "1.0"
glam        = { version = "0.24", optional = true }
paste       = { version = "1.0", optional = true }

[dev-dependencies]
glam = "0.24"
