[package]
authors     = ["The Fish Folks & Spicy Lobster Developers"]
description = "Simple and easy-to-use game engine."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_lib"
repository  = "https://github.com/fishfolk/bones"
version     = "0.2.0"

[features]
default = []
glam = ["bones_ecs/glam"]

[dependencies]
bones_ecs        = { version = "^0.2.0", path = "../bones_ecs" }
