[package]
name = "bones_matchmaker"
version = "0.1.1"
edition = "2021"
authors = ["The Fish Folk & Spicy Lobster Developers"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.66"
bevy_tasks = "0.9.1"
bones_matchmaker_proto = { path = "../bones_matchmaker_proto" }
bytes = "1.2.1"
clap = { version = "4.0.18", features = ["derive", "env"] }
either = "1.8.0"
futures = { version = "0.3.25", default-features = false, features = ["std", "async-await"] }
futures-lite = "1.12.0"
once_cell = "1.15.0"
postcard = { version = "1.0.2", default-features = false, features = ["alloc"] }
quinn = { version = "0.9", default-features = false, features = ["futures-io", "native-certs", "tls-rustls"] }
quinn_runtime_bevy = { path = "../quinn_runtime_bevy" }
rand = "0.8.5"
rcgen = "0.10.0"
rustls = { version = "0.20.7", features = ["dangerous_configuration", "quic"] }
scc = "1.0.1"
serde = { version = "1.0.147", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
async-io = "1.9.0"

