[package]
name = "bones_matchmaker_proto"
description = "Network protocol types for the Bones matchmaking server."
version = "0.1.0"
edition = "2021"
authors = ["The Fish Folk & Spicy Lobster Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fishfolk/bones"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
