[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Network protocol types for the Bones matchmaking server."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_matchmaker_proto"
repository  = "https://github.com/fishfolk/bones"
version     = "0.2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
