[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Core rendering types for bones_lib."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_reflect"
repository  = "https://github.com/fishfolk/bones"
version     = "0.1.0"

[features]
# TODO: make these non-default ( I think )
default = ["serde", "dep:serde_yaml", "glam"]
serde   = ["dep:serde", "ulid/serde"]

[dependencies]
bones_reflect_macros = { version = "0.1", path = "./macros" }
bones_utils          = { version = "0.1", path = "../bones_utils" }

downcast-rs = "1.2"
glam        = { version = "0.23", optional = true }
hashbrown   = { version = "0.14", features = ["serde"] }
parking_lot = "0.12.1"
paste       = "1.0"
serde       = { version = "1.0", features = ["derive"], optional = true }
serde_yaml  = { version = "0.9", optional = true }
ulid        = { version = "1.0" }

[dev-dependencies]
# bones_bevy_utils = { version = "^0.2.0", path = "../bones_bevy_utils" }
# bones_lib        = { version = "^0.2.0", path = "../../", features = ["bevy"] }
