[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Core rendering types for bones_lib."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_reflect"
repository  = "https://github.com/fishfolk/bones"
version     = "0.1.0"

[features]
# TODO: make these non-default ( I think )
default = ["serde", "glam", "derive"]
serde   = ["dep:serde", "ulid/serde", "bones_utils/serde"]
derive  = ["bones_reflect_macros"]

[dependencies]
bones_reflect_macros = { version = "0.1", path = "./macros", optional = true }
bones_utils          = { version = "0.1", path = "../bones_utils" }
ulid                 = { version = "1.0" }
paste                = "1.0"

# Optional deps
glam        = { version = "0.23", optional = true }
serde       = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_yaml  = "0.9"
trybuild = "1.0"
