[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Core rendering types for bones_lib."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_reflectish"
repository  = "https://github.com/fishfolk/bones"
version     = "0.1.0"

[features]
default = ["serde"]
serde   = ["dep:serde"]

[dependencies]
bones_reflectish_macros = { version = "0.1", path = "./macros" }
downcast-rs             = "1.2"
hashbrown               = { version = "0.14", features = ["serde"] }
serde                   = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
bones_bevy_asset = { version = "^0.2.0", path = "../bones_bevy_asset" }
bones_bevy_utils = { version = "^0.2.0", path = "../bones_bevy_utils" }
bones_lib        = { version = "^0.2.0", path = "../../", features = ["bevy"] }
