[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Core rendering types for bones_lib."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_render"
repository  = "https://github.com/fishfolk/bones"
version     = "0.1.1"

[dependencies]
bones_asset      = { version = "^0.1.0", path = "../bones_asset" }
bones_bevy_utils = { version = "^0.1.0", path = "../bones_bevy_utils", optional = true }
bones_ecs        = { version = "^0.1.0", path = "../bones_ecs" }
type_ulid        = { version = "^0.1.0", path = "../type_ulid" }

bevy_render    = { version = "0.9.1", optional = true }
bevy_transform = { version = "0.9.1", optional = true }

glam  = "0.22.0"
serde = { version = "1.0.0", optional = true }

[features]
bevy    = ["dep:bones_bevy_utils", "dep:bevy_transform", "dep:bevy_render"]
default = []
serde   = ["dep:serde"]
