[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Core rendering types for bones_lib."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_render"
repository  = "https://github.com/fishfolk/bones"
version     = "0.2.0"

[dependencies]
bones_asset      = { version = "^0.2.0", path = "../bones_asset" }
bones_ecs        = { version = "^0.2.0", path = "../bones_ecs" }

glam      = "0.23"
hex       = "0.4"
serde     = { version = "1.0", optional = true }
thiserror = "1.0"

[features]
default = []
serde   = ["dep:serde"]
