[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Simple reflection system based on the #[repr(C)] memory layout."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_schema"
repository  = "https://github.com/fishfolk/bones"
version     = "0.1.0"

[features]
default = ["derive"]
serde   = ["dep:serde", "ulid/serde", "bones_utils/serde"]
derive  = ["bones_schema_macros"]
glam    = ["dep:glam"]

[dependencies]
bones_utils = { version = "0.1", path = "../bones_utils" }
ulid        = { version = "1.0" }
paste       = "1.0"

# Optional deps
bones_schema_macros = { version = "0.1", path = "./macros", optional = true }
glam                 = { version = "0.24", optional = true }
serde                = { version = "1.0", features = ["derive"], optional = true }
sptr                 = "0.3"

[[test]]
name = "tests"
required-features = ["glam"]

[dev-dependencies]
serde_yaml  = "0.9"
trybuild = "1.0"
