[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Core rendering types for bones_lib."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "bones_utils"
repository  = "https://github.com/fishfolk/bones"
version     = "0.1.0"

[features]
serde = ["dep:serde", "hashbrown/serde"]

[dependencies]
bones_utils_macros = { version = "0.2", path = "./macros" }
ahash       = "0.8.3"
hashbrown   = { version = "0.14" }
ulid        = "1.0"
bevy_ptr    = "0.11.0"
parking_lot = "0.12"
serde       = { version = "1.0", optional = true }
maybe-owned = "0.3"
