[package]
authors     = ["The Fish Folk & Spicy Lobster Developers"]
description = "Quinn runtime implementation built on Bevy's IO task pool."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "quinn_runtime_bevy"
repository  = "https://github.com/fishfolk/bones"
version     = "0.2.0"

[dependencies]
async-executor = "1.4"
async-io       = "1.9"
bevy_tasks     = "0.10"
futures-lite   = "1.0"
pin-project    = "1.0"
quinn          = { version = "0.10", default-features = false, features = ["native-certs", "tls-rustls"] }
quinn-udp      = { version = "0.4", default-features = false }
