[package]
name = "type_ulid"
version = "0.1.0"
edition = "2021"
description = "Trait for associating ULIDs with Rust types."
authors = ["The Fish Folk & Spicy Lobster Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fishfolk/bones"

[features]
default = ["std"]
# Implement TypeUlid for basic types in the standard library
std = []

[dependencies]
type_ulid_macros = { version = "0.1.0", path = "./macros" }
ulid = { version = "1.0.0", default-features = false }
