[package]
name              = "demo_hello_world"
edition.workspace = true
version.workspace = true
license.workspace = true
publish           = false

[dependencies]
bones_framework     = { path = "../../framework_crates/bones_framework" }
bones_bevy_renderer = { path = "../../framework_crates/bones_bevy_renderer" }
