[package]
name                    = "bones_asset"
description             = "Asset interface for bones_lib."
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
documentation.workspace = true
categories.workspace    = true
keywords.workspace      = true

[features]
default = []

[dependencies]
bones_utils  = { version = "0.1", path = "../bones_utils", features = ["serde"] }
bones_schema = { version = "0.1", path = "../bones_schema" }

serde         = { version = "1.0", features = ["derive"] }
sha2          = "0.10"
bs58          = "0.5"
anyhow        = "1.0"
serde_yaml    = "0.9"
serde_json    = "1.0"
paste         = "1.0"
ulid          = { version = "1.0" }
semver        = { version = "1.0.17", features = ["serde"] }
async-channel = "1.8.0"
once_cell     = "1.18.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "6.0"

[dev-dependencies]
bones_schema = { version = "0.1", path = "../bones_schema", features = ["glam"] }
glam         = "0.24"
