[package]
name                    = "bones_asset"
description             = "Asset interface for bones_lib."
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
documentation.workspace = true
categories.workspace    = true
keywords.workspace      = true

[features]
default = []

[dependencies]
bones_utils  = { version = "0.3", path = "../bones_utils", features = ["serde"] }
bones_schema = { version = "0.3", path = "../bones_schema", features = ["serde"] }

serde           = { version = "1.0", features = ["derive"] }
sha2            = "0.10"
bs58            = "0.5"
anyhow          = "1.0"
serde_yaml      = "0.9"
serde_json      = "1.0"
erased-serde    = "0.4"
paste           = "1.0"
ulid            = { version = "1.0" }
semver          = { version = "1.0", features = ["serde"] }
async-channel   = "1.9"
once_cell       = "1.18"
path-absolutize = { version = "3.1", features = ["use_unix_paths_on_wasm"] }
ehttp           = "0.3"
tracing         = "0.1"
bevy_tasks      = "0.11"
dashmap         = "5.5"
event-listener  = "4.0"
elsa            = "1.9"
append-only-vec = "0.1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
bones_schema = { version = "0.3", path = "../bones_schema", features = ["glam"] }
glam         = "0.24"
bevy_tasks   = "0.11"
